test/sema/constructor-autogenerated-no-arguments.delta
// RUN: %not %delta -typecheck %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+1]]:13: error: too few arguments to 'S', expected 2
    var s = S();
}

struct S {
    int x;
    int y;
}
